--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     build: ./
     volumes: 
       - ${ROS_PROJECT_PATH}:/ros2_ws
+      - ./config/.bashrc:/root/.bashrc-external
+      - ./config/.tmux.conf:/root/.tmux.conf
     environment:
       - DISPLAY=novnc:0.0
     networks:
