Update README and config files

--- a/config/.tmux.conf
+++ b/config/.tmux.conf
@@ -32,13 +32,10 @@ bind-key h select-pane -L
 bind-key l select-pane -R
 bind-key j select-pane -D
 bind-key k select-pane -U
-bind-key x confirm-before kill-session
+bind-key x kill-session
 
 set -g history-limit 99999
 
 # tmux colors
 set -g default-terminal "xterm-256color"
 set -ag terminal-overrides ",xterm-256color:Tc"
-
-# Spaceduck basic theme
-# source-file /root/.tmux-spaceduck/tmux/basic.conf
