Clean up and consolidation

--- a/config/novnc/.fluxbox/styles/WindowLab/theme.cfg
+++ b/config/novnc/.fluxbox/styles/WindowLab/theme.cfg
@@ -4,6 +4,16 @@ style.date:		January 6, 2014
 style.credits:		
 style.comment:          
 
+# *font:							
+# toolbar.iconbar.focused.font:		SonySketchEF-12
+# toolbar.iconbar.unfocused.font:	SonySketchEF-10
+# window*font:				SonySketchEF-9.2
+# menu.title.font: 			SonySketchEF-9.2
+
+*font:					-misc-fixed-bold-r-normal--0-0-75-75-c-0-iso8859-14
+window*font:				terminus-14
+menu.title.font: 			terminus-14
+
 toolbar:				flat
 toolbar.color:				#c0c0c0
 toolbar.textColor:			#c0c0c0
@@ -36,7 +46,7 @@ menu.title:				flat
 menu.title.color:			#f0d000
 menu.title.justify:			center
 menu.title.textColor:			#000000
-menu.title.font: 			Sans-8
+
 menu.frame:				flat
 menu.frame.justify:			left
 menu.frame.color:			#c0c0c0
@@ -100,5 +110,3 @@ bevelWidth:         			0
 borderWidth:        			0
 borderColor:	   			#303030
 
-*font:					Sans-8
-window*font:				Sans-8
