--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@
 #
 # Author: Adeeb Abbas
 
+name: ros_ws
 version: '3.8'
 services:
   ros_dev_env:
@@ -29,7 +30,6 @@ services:
       context: ./docker/novnc
     volumes:
       - ./config/novnc/.fluxbox:/root/.fluxbox
-      - ./config/novnc/.fehbg:/root/.fehbg
       - ./config/novnc/.bashrc:/root/.bashrc
       - ./config/novnc/.Xdefaults:/root/.Xdefaults
     environment:
