--- a/docker/novnc/supervisord.conf
+++ b/docker/novnc/supervisord.conf
@@ -1,5 +1,19 @@
 [supervisord]
 nodaemon=true
+user=root
 
-[include]
-files = /app/conf.d/*.conf
+[program:tigervnc]
+command=Xtigervnc -geometry "%(ENV_DISPLAY_WIDTH)s"x"%(ENV_DISPLAY_HEIGHT)s" -listen tcp -ac -SecurityTypes None -AlwaysShared -AcceptKeyEvents -AcceptPointerEvents -SendCutText -AcceptCutText :0.0
+priority=1
+autorestart=true
+
+[program:fluxbox]
+command=startfluxbox
+startsecs=0
+priority=2
+autorestart=false
+
+[program:websockify]
+command=websockify --web /usr/share/novnc 8080 localhost:5900
+priority=2
+autorestart=true
