--- a/config/x11-vnc/.fluxbox/styles/WindowLab/theme.cfg
+++ b/config/x11-vnc/.fluxbox/styles/WindowLab/theme.cfg
@@ -11,30 +11,36 @@ style.comment:
 # menu.title.font: 			SonySketchEF-9.2
 
 *font:					-misc-fixed-bold-r-normal--0-0-75-75-c-0-iso8859-14
-window*font:				terminus-14
-menu.title.font: 			terminus-14
+window*font:				terminus-12
+menu.title.font: 			terminus-12
+toolbar.iconbar.focused.font:		-misc-fixed-bold-r-normal--0-0-75-75-c-0-iso8859-14
+toolbar.iconbar.unfocused.font:	-misc-fixed-bold-r-normal--0-0-75-75-c-0-iso8859-14
 
 toolbar:				flat
 toolbar.color:				#c0c0c0
 toolbar.textColor:			#c0c0c0
 toolbar.justify:			center
-toolbar.height:				22
+toolbar.height:				25
 toolbar.bevelWidth:			0
 toolbar.borderWidth:			2
-toolbar.borderColor:			#101010
+toolbar.borderColor:			#000000
 toolbar.workspace:			parentrelative
 toolbar.workspace.pixmap:		toolbar.xpm
 toolbar.workspace.textColor:		#000000
 toolbar.iconbar.empty:			parentrelative
 toolbar.iconbar.empty.pixmap:		toolbar.xpm
+toolbar.iconbar.empty.picColor: #F0A0A0
 toolbar.iconbar.focused:		flat solid
 toolbar.iconbar.focused.color:		#F0D000
 toolbar.iconbar.focused.textColor:	#000000
 toolbar.iconbar.focused.justify:	left
+toolbar.iconbar.focused.borderColor: #000000
 toolbar.iconbar.unfocused:		parentrelative
 toolbar.iconbar.unfocused.pixmap:	toolbar.xpm
-toolbar.iconbar.unfocused.textColor:	#202020
+toolbar.iconbar.unfocused.textColor:	#505050
+toolbar.iconbar.unfocused.color: #303030
 toolbar.iconbar.unfocused.justify:	left
+toolbar.iconbar.unfocused.borderColor: #000000
 toolbar.clock:				parentrelative
 toolbar.clock.pixmap:			toolbar.xpm
 toolbar.clock.textColor:		#000000
@@ -108,5 +114,5 @@ handleWidth:        			0
 frameWidth:         			1
 bevelWidth:         			0
 borderWidth:        			0
-borderColor:	   			#303030
+borderColor:	   			#3030FF
 
