--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 # 
 # NOTE - Only necessary for machines without an Nvidia GPU
 # This Docker Compose configuration sets up a Drake ROS integration environment
-# along with a noVNC server for remote access to the graphical interface of any
+# along with a vncserver server for remote access to the graphical interface of any
 # visualization tools used in the project.
 #
 # Author: Adeeb Abbas
@@ -20,18 +20,18 @@ services:
       - ./config/ros-dev/.bashrc:/root/.bashrc-external
       - ./config/ros-dev/.tmux.conf:/root/.tmux.conf
     environment:
-      - DISPLAY=novnc:0.0
+      - DISPLAY=vncserver:0.0
     networks:
       - x11
     stdin_open: true
     tty: true
-  novnc:
+  vncserver:
     build:
-      context: ./docker/novnc
+      context: ./docker/x11-vnc
     volumes:
-      - ./config/novnc/.fluxbox:/root/.fluxbox
-      - ./config/novnc/.bashrc:/root/.bashrc
-      - ./config/novnc/.Xdefaults:/root/.Xdefaults
+      - ./config/x11-vnc/.fluxbox:/root/.fluxbox
+      - ./config/x11-vnc/.bashrc:/root/.bashrc
+      - ./config/x11-vnc/.Xdefaults:/root/.Xdefaults
     environment:
       - RUN_XTERM=yes
       - RUN_FLUXBOX=true
