--- a/docker/x11-vnc/supervisord.conf
+++ b/docker/x11-vnc/supervisord.conf
@@ -1,9 +1,10 @@
 [supervisord]
 nodaemon=true
 user=root
+loglevel=debug
 
 [program:tigervnc]
-command=Xtigervnc -geometry "%(ENV_DISPLAY_WIDTH)s"x"%(ENV_DISPLAY_HEIGHT)s" -listen tcp -ac -SecurityTypes None -AlwaysShared -AcceptKeyEvents -AcceptPointerEvents -SendCutText -AcceptCutText :0.0
+command=Xtigervnc -desktop "Windows 98" -geometry "%(ENV_DISPLAY_WIDTH)s"x"%(ENV_DISPLAY_HEIGHT)s" -listen tcp -ac -SecurityTypes None -AlwaysShared -AcceptKeyEvents -AcceptPointerEvents -SendCutText -AcceptCutText :0.0
 priority=1
 autorestart=true
 
