It's better to have the theme choice in an env variable

--- a/config/x11-vnc/.fluxbox/styles/theme.cfg
+++ b/config/x11-vnc/.fluxbox/styles/theme.cfg
@@ -1,118 +1,175 @@
-style.name:		WindowLab
-style.author:		Ake
-style.date:		January 6, 2014
-style.credits:		
-style.comment:          
+#=================================================
+# This theme was generated from the Wine-registry,
+# and then converted in to a theme by a R2T2-robot
+# : R2T2 = Registry to Theme - 2 WM-themes)...
+#=================================================
 
-# *font:							
-# toolbar.iconbar.focused.font:		SonySketchEF-12
-# toolbar.iconbar.unfocused.font:	SonySketchEF-10
-# window*font:				SonySketchEF-9.2
-# menu.title.font: 			SonySketchEF-9.2
+# Window layout:
 
-*font:					-misc-fixed-bold-r-normal--0-0-75-75-c-0-iso8859-14
-window*font:				terminus-12
-menu.title.font: 			terminus-12
-toolbar.iconbar.focused.font:		-misc-fixed-bold-r-normal--0-0-75-75-c-0-iso8859-14
-toolbar.iconbar.unfocused.font:	-misc-fixed-bold-r-normal--0-0-75-75-c-0-iso8859-14
+borderWidth: 1
+bevelWidth: 2
+#bevelHeight: 1
+#----------------------------------------
+# handleWidth replaces client.bevelHeight
+#----------------------------------------
+window.handleWidth: 3
+#window.client.bevelWidth: 3
+#window.client.bevelHeight: 0
+# title.height 22 is suitable for 18x18 buttons!
+window.title.height: 22
+window.*.font: Arial Bold-10
+# Wine - FontWeight: Regular
+# Wine - FontName: System Regular
+#TitleMargin:4
+window.*.justify: left
+window.title.focus: raised gradient horizontal
+window.label.focus: parentrelative
+window.title.unfocus: raised gradient horizontal
+window.label.unfocus: parentrelative
+window.handle.focus: raised solid
+window.handle.unfocus: raised solid
+window.grip.focus: raised solid
+window.grip.unfocus: raised solid
 
-toolbar:				flat
-toolbar.color:				#c0c0c0
-toolbar.textColor:			#c0c0c0
-toolbar.justify:			center
-toolbar.height:				25
-toolbar.bevelWidth:			0
-toolbar.borderWidth:			2
-toolbar.borderColor:			#000000
-toolbar.workspace:			parentrelative
-toolbar.workspace.pixmap:		toolbar.xpm
-toolbar.workspace.textColor:		#000000
-toolbar.iconbar.empty:			parentrelative
-toolbar.iconbar.empty.pixmap:		toolbar.xpm
-toolbar.iconbar.empty.picColor: #F0A0A0
-toolbar.iconbar.focused:		flat solid
-toolbar.iconbar.focused.color:		#F0D000
-toolbar.iconbar.focused.textColor:	#000000
-toolbar.iconbar.focused.justify:	left
-toolbar.iconbar.focused.borderColor: #000000
-toolbar.iconbar.unfocused:		parentrelative
-toolbar.iconbar.unfocused.pixmap:	toolbar.xpm
-toolbar.iconbar.unfocused.textColor:	#505050
-toolbar.iconbar.unfocused.color: #303030
-toolbar.iconbar.unfocused.justify:	left
-toolbar.iconbar.unfocused.borderColor: #000000
-toolbar.clock:				parentrelative
-toolbar.clock.pixmap:			toolbar.xpm
-toolbar.clock.textColor:		#000000
-toolbar.button:				parentrelative
-toolbar.button.pixmap:			toolbar.xpm
-toolbar.button.picColor:		#303030
+#=================================================
+# Window colors:
 
-menu.title:				flat
-menu.title.color:			#f0d000
-menu.title.justify:			center
-menu.title.textColor:			#000000
+window.focus.borderColor: #808080
+window.unfocus.borderColor: #808080
+window.focus.label.textColor: #FFFFFF
+window.unfocus.label.textColor: #D4D0C8
+window.title.focus.color: #0A246A
+window.label.focus.color: #0A246A
+window.title.focus.colorTo: #A6CAF0
+window.label.focus.colorTo: #0A246A
+window.title.unfocus.color: #808080
+window.label.unfocus.color: #808080
+window.title.unfocus.colorTo: #C0C0C0
+window.label.unfocus.colorTo: #808080 
+#----------------------------------------
+# Active framecolor:
+#----------------------------------------
+window.title.focus.borderColor: #D4D0C8
+#window.title.focus.separator.color: #D4D0C8
+#window.frame.focus.color: #D4D0C8
+window.handle.focus.color: #D4D0C8
+window.grip.focus.color: #D4D0C8
+#----------------------------------------
+# Inactive framecolor:
+#----------------------------------------
+window.title.unfocus.borderColor: #D4D0C8
+#window.title.unfocus.separator.color: #D4D0C8
+#window.frame.unfocus.color: #D4D0C8
+window.handle.unfocus.color: #D4D0C8
+window.grip.unfocus.color: #D4D0C8
 
-menu.frame:				flat
-menu.frame.justify:			left
-menu.frame.color:			#c0c0c0
-menu.frame.textColor:			#000000
-menu.frame.disableColor:		#404040
-menu.hilite:				flat
-menu.hilite.color:			#000000
-menu.hilite.textColor:			#f0f0f0
-menu.itemHeight:			18
-menu.bevelWidth:			2
-menu.titleHeight:			4
-menu.borderColor:			#101010
-menu.borderWidth:			2
-menu.bullet:				triangle
-menu.bullet.position:			Right
-menu.submenu.pixmap:			
-menu.hilite.submenu.pixmap:		
+#=================================================
+# Button layout:
 
-window.title.focus:			flat
-window.title.focus.color:		#f0d000
-window.title.unfocus:			flat
-window.title.unfocus.color:		#c0c0c0
-window.title.height:			20
-window.justify:				right
-window.label.focus:			parentrelative
-window.label.focus.color:		#181818
-window.label.focus.textColor:		#000000
-window.label.unfocus:			parentrelative
-window.label.unfocus.color:             #181818
-window.label.unfocus.textColor:		#000000
-window.close.pixmap:			cls.xpm
-window.close.unfocus.pixmap:		clsi.xpm
-window.close.pressed.pixmap:		cls.xpm
-window.iconify.pixmap:			min.xpm
-window.iconify.unfocus.pixmap:		mini.xpm
-window.iconify.pressed.pixmap:		min.xpm
-window.maximize.pixmap:			max.xpm
-window.maximize.unfocus.pixmap:		maxi.xpm
-window.maximize.pressed.pixmap:		max.xpm
-window.stick.pixmap:			min.xpm
-window.stick.unfocus.pixmap:		mini.xpm		
-window.stick.pressed.pixmap:		min.xpm
-window.stuck.pixmap:			min.xpm
-window.stuck.unfocus.pixmap:		mini.xpm
-window.handle.focus:			flat
-window.handle.focus.color:		#303030
-window.handle.unfocus:			flat
-window.handle.unfocus.color:		#303030
-window.grip.focus:			flat
-window.grip.focus.color:		#303030
-window.grip.unfocus:			flat
-window.grip.unfocus.color:		#303030
-window.bevelWidth:			2
-window.shade:				true
-window.borderWidth:			2
-window.borderColor:			#000000
+*.button.focus: raised gradient diagonal
+*.button.unfocus: raised gradient diagonal
+*.button.focus.pressed: sunken gradient diagonal
 
-handleWidth:        			0
-frameWidth:         			1
-bevelWidth:         			0
-borderWidth:        			0
-borderColor:	   			#3030FF
+window.close.pixmap: close_18.png
+window.close.unfocus.pixmap: close_18.png
+window.close.pressed.pixmap: close_pressed_18.png
+window.maximize.pixmap: max_18.png
+window.maximize.unfocus.pixmap: max_18.png
+window.maximize.pressed.pixmap: max_pressed_18.png
+window.iconify.pixmap: iconify_18.png
+window.iconify.unfocus.pixmap: iconify_18.png
+window.iconify.pressed.pixmap: iconify_pressed_18.png
+window.stick.pixmap: focus_green_18.png
+window.stick.unfocus.pixmap: unfocus_green_18.png
+window.stuck.pixmap: focus_yellow_18.png
+window.stuck.unfocus.pixmap: unfocus_yellow_18.png
+window.*.pressed.pixmap: focus_pressed_18.png
 
+#=================================================
+# Button colors:
+
+*.button.focus.picColor: #000000
+*.button.focus.*.hover.picColor: #000000
+#*.button.focus.close.*.picColor: #000000
+#*.button.focus.close.hover.picColor: #000000
+*.button.focus.*.borderColor: #000000
+
+*.button.unfocus.picColor: #000000
+#*.button.unfocus.close.*.picColor: #000000
+#*.button.unfocus.close.hover.picColor: #000000
+*.button.unfocus.*.borderColor: #000000
+window.button.disabled.picColor: #808080
+
+*.button.focus.*.color: #D4D0C8
+*.button.focus.*.colorTo: #D4D0C8
+#*.button.focus.close.*.color: #D4D0C8
+#*.button.focus.close.*.colorTo: #D4D0C8
+*.button.unfocus.*.color: #D4D0C8
+*.button.unfocus.*.colorTo: #D4D0C8
+#*.button.unfocus.close.*.color: #D4D0C8
+#*.button.unfocus.close.*.colorTo: #D4D0C8
+*.button.focus.*.pressed.color: #D4D0C8
+*.button.focus.*.pressed.colorTo: #D4D0C8
+#*.button.focus.*.hover.*.color: #B5B5B5
+#*.button.focus.*.hover.*.colorTo: #B5B5B5
+#*.button.focus.close.hover.*.color: #B5B5B5
+#*.button.focus.close.hover.*.colorTo: #B5B5B5
+
+#=================================================
+# Menu section:
+
+menu.titleHeight: 19
+menu.itemHeight: 19
+menu.*.font: Arial-9
+# Wine - FontWeight: Regular
+# Wine - FontName: Tahoma
+menu.borderWidth: 1
+menu.title.justify: center
+#menu.separator.width: 1
+menu.borderWidth: 1
+menu.title: raised solid
+menu.frame: raised solid
+menu.frame.focus: flat solid
+menu.*.bg.shadow: 148
+
+menu.borderColor: #D4D0C8
+menu.bg.color: #D4D0C8
+menu.frame.color: #D4D0C8
+menu.title.color: #D4D0C8
+menu.*.textColor: #000000
+menu.*.picColor: #000000
+menu.hilite.color: #0A246A
+menu.hilite.textColor: #FFFFFF
+menu.*.disabled.textColor: #808080
+#menu.separator.color: #808080
+
+#=================================================
+# Slit:
+
+slit.borderWidth: 1
+slit.bevelWidth: 2
+slit: raised gradient diagonal
+
+slit.color: #FFFFFF
+slit.borderColor: #000000
+slit.colorTo: #D4D0C8
+slit.textColor: #000000
+
+#=================================================
+# Toolbar:
+
+toolbar.*.font: Arial-9
+toolbar.height: 25
+toolbar: flat gradient vertical
+toolbar.justify: left
+toolbar.windowLabel: raised solid
+toolbar.label: flat solid
+toolbar.clock: parentrelative
+toolbar.button: raised solid
+toolbar.*.pressed: sunken solid
+
+toolbar.*.textColor: #333333
+toolbar.color: Gray
+toolbar.colorTo: Gray
+toolbar.*.color: Gray
+toolbar.*.pressed.color: LightGray
