--- a/docker/x11-vnc/supervisord.conf
+++ b/docker/x11-vnc/supervisord.conf
@@ -1,15 +1,16 @@
 [supervisord]
 nodaemon=true
 user=root
-loglevel=debug
+# loglevel=debug
 
 [program:tigervnc]
-command=Xtigervnc -desktop "Windows 98" -geometry "%(ENV_DISPLAY_WIDTH)s"x"%(ENV_DISPLAY_HEIGHT)s" -listen tcp -ac -SecurityTypes None -AlwaysShared -AcceptKeyEvents -AcceptPointerEvents -SendCutText -AcceptCutText :0.0
+command=Xtigervnc -desktop "ROS BOX" -geometry "%(ENV_DISPLAY_WIDTH)s"x"%(ENV_DISPLAY_HEIGHT)s" -listen tcp -ac -SecurityTypes None -AlwaysShared -AcceptKeyEvents -AcceptPointerEvents -SendCutText -AcceptCutText :0.0
 priority=1
 autorestart=true
 
 [program:fluxbox]
 command=startfluxbox
+directory=/root
 startsecs=0
 priority=2
 autorestart=false
