Splash screen for first time VNC use

--- a/docker/x11-vnc/Dockerfile
+++ b/docker/x11-vnc/Dockerfile
@@ -30,4 +30,7 @@ COPY supervisord.conf /supervisord.conf
 # Copy in config files
 COPY config /config
 
+# Add a first time use flag
+RUN touch /root/.first_login
+
 ENTRYPOINT ["/entrypoint.sh"]
