--- a/docker/x11-vnc/config/themes/WindowLab/theme.cfg
+++ b/docker/x11-vnc/config/themes/WindowLab/theme.cfg
@@ -17,8 +17,8 @@ toolbar.iconbar.focused.font:		-misc-fixed-bold-r-normal--0-0-75-75-c-0-iso8859-
 toolbar.iconbar.unfocused.font:	-misc-fixed-bold-r-normal--0-0-75-75-c-0-iso8859-14
 
 toolbar:				flat
-toolbar.color:				#c0c0c0
-toolbar.textColor:			#c0c0c0
+toolbar.color:				#000000
+toolbar.textColor:			#FFFFFF
 toolbar.justify:			center
 toolbar.height:				25
 toolbar.bevelWidth:			0
@@ -26,7 +26,7 @@ toolbar.borderWidth:			2
 toolbar.borderColor:			#000000
 toolbar.workspace:			parentrelative
 toolbar.workspace.pixmap:		toolbar.xpm
-toolbar.workspace.textColor:		#000000
+toolbar.workspace.textColor:		#FFFFFF
 toolbar.iconbar.empty:			parentrelative
 toolbar.iconbar.empty.pixmap:		toolbar.xpm
 toolbar.iconbar.empty.picColor: #F0A0A0
@@ -35,18 +35,18 @@ toolbar.iconbar.focused.color:		#F0D000
 toolbar.iconbar.focused.textColor:	#000000
 toolbar.iconbar.focused.justify:	left
 toolbar.iconbar.focused.borderColor: #000000
-toolbar.iconbar.unfocused:		parentrelative
+toolbar.iconbar.unfocused:		flat solid
 toolbar.iconbar.unfocused.pixmap:	toolbar.xpm
-toolbar.iconbar.unfocused.textColor:	#505050
-toolbar.iconbar.unfocused.color: #303030
+toolbar.iconbar.unfocused.textColor:	#CCCCCC
+toolbar.iconbar.unfocused.color: #333333
 toolbar.iconbar.unfocused.justify:	left
 toolbar.iconbar.unfocused.borderColor: #000000
 toolbar.clock:				parentrelative
 toolbar.clock.pixmap:			toolbar.xpm
-toolbar.clock.textColor:		#000000
+toolbar.clock.textColor:		#FFFFFF
 toolbar.button:				parentrelative
 toolbar.button.pixmap:			toolbar.xpm
-toolbar.button.picColor:		#303030
+toolbar.button.picColor:		#F0D000
 
 menu.title:				flat
 menu.title.color:			#f0d000
